--- a/money_calc.html
+++ b/money_calc.html
@@ -9,7 +9,7 @@
 <body>
     <div id="user">
         <div id="user_img"></div>
-        <a href="index_auth.html"><button  id="unlogin">ВЫХОД</button></a>
+        <a href="index.html"><button  id="unlogin">ВЫХОД</button></a>
     </div>
     <div id="test">
         <div>
